apps/architecture-portal/versioned_docs/version-1.0.32.0/core/modules/web-runtime-platform.mdx
---
title: Web Runtime Platform
area: core
status: implemented
owners: [core, web, audio]
module: web-runtime-platform
source_paths:
  - packages/web-runtime-platform
  - tests/platform/web
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';
import {DiagramFrame} from '@site/src/components/DiagramFrame';

<BuildIdentity kind="modules" id="web-runtime-platform" />

<DiagramFrame title="Web Runtime Platform Module" diagramId="web-runtime-platform" />

## 1. 目的与非职责
为浏览器 Host 提供共享 Runtime Session、输入 adapter、Control bridge、manifest gate 与 Web Audio 接线；不拥有 Creator UI、诊断 UI、Project Truth 或产品专属身份。
## 2. 当前实现状态
Creator Web 与诊断 Web Runtime Host 共用同一 Platform `0.3.5` 和同一 Wasm Runtime；Host 通过各自受 Product Assembly 允许的分发身份启动。Platform 已提供全部 Sample query/mutation/preview/release/stop/retry、ordered Voice notification、recovery readiness 与 fail-closed generation cleanup。Browser Main 只在 ControlBridge 与 audio adapter 均已发布后观察到 Runtime readiness，首个请求不能落入半初始化窗口。
## 3. 所有权与依赖
只依赖 Application Facade `1.4.5` 与 Audio Runtime `0.5.1`。Product CMake 注入 Product Build、Platform 版本及精确 Host allowlist。
## 4. 架构与数据流
Creator/Diagnostic Host → Runtime Session → Application Facade；Project/Sample actions 共享有界 Host lane，Pointer、Keyboard、MIDI 汇入串行 inspect→trigger admission，AudioWorklet 消费不可变 Runtime Snapshot 并发布 Voice state。
## 5. API 与 Contract 边界
Platform 校验 canonical distribution manifest，但该同构建协议不是公开跨版本 Contract。Project Bundle 与 WAV sidecar 只通过 Facade 的 bounded streaming API 进入 Core，Browser 不解析 Project/WAV。
## 6. 状态、错误与并发
Manifest mismatch、生命周期失效和 terminal failure 均 fail closed；Main、Control、Worker 与 AudioWorklet 的职责和消息上限固定。启动时先以 release ordering 发布 ControlBridge，再发布 audio adapter；pre-JS 的 audio readiness 因而同时构成 ControlBridge publication barrier。`recovery_probe_ready` 仅在 Runtime 为 `recovering`、当前 epoch 的 probe window 已 armed 且没有已保留 Probe 时为真；Probe 被保留或 window 关闭后立即回到 false，Host 不得从 timer、Context 状态或页面可见性推断 readiness。

Runtime Session 启动只运行一次真实 Control Worker/OPFS capability probe，默认等待预算为 15 秒。明确缺少 Worker/Blob、Worker 返回 negative 或 Worker error 继续 fail closed 为 `UNSUPPORTED_WEB_RUNTIME`；纯调度预算耗尽精确进入 `HOST_TIMEOUT`，不能伪造 `opfs`、`opfsSyncAccessHandle` 或 `opfsWritableReplace` 缺失。message、error 与 timeout 三条 settlement 路径都由同一 `finally` terminate Worker 并 revoke Blob URL。
## 7. 产品使用方
`creator-web 1.5.4` 与 `web-runtime-host 1.2.14`。本 Build 来自 Audio Runtime 渲染路径 96 帧线性斜坡（F6）的 Core Module 级联，Platform 只更新精确依赖身份；Creator 的提交前静音门与输入身份、`DUPLICATE_ID` 可恢复呈现、trim 握把与 Capture 模态面板只是 Host 呈现，pre-commit Crop 仍是 Host-local ephemeral 编辑，都不进入 Platform、Facade 或 Project Truth。
## 8. 测试与证据
C++ manifest/control/realtime tests、Node Runtime Session tests、Chromium/WebKit browser proof 与分发验证覆盖共享边界；Node 与 Creator packaged Proof 还覆盖 recovery readiness 的 `false -> true -> false -> running` 序列。
## 9. 限制与下一门禁
自动化不替代物理 MIDI、Safari/iPad Touch、声学延迟或主观听感验收。
## 10. 版本身份
版本和依赖由 `module.json` 与 Product Assembly Lock 派生。
